Fixed Z-index

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 /* Chapter Logo */
 .chapter-logo {
 	position: fixed;
-	z-index: 10000000000000000;
+	z-index: 1000;
 	margin: 1em 2em;
 	/* height: 40px; */
 	/* max-height: 50px; */
@@ -76,7 +76,7 @@ body {
 	width: 40px;
 	height: 12px;
 	right: 0;
-	z-index: 10000000000000000;
+	z-index: 1000;
 	cursor: pointer;
 	/* background: black; */
 }
@@ -101,22 +101,22 @@ span.two {
 	width: 0%;
 	height: 50vh;
 	background: #101010;
-	z-index: 10000000;
+	z-index: 999;
 }
 .b1 {
 	top: 0;
 	left: 0;
-	z-index: 10000000;
+	z-index: 998;
 }
 
 .b2 {
 	bottom: 0;
 	right: 0;
-	z-index: 10000000;
+	z-index: 998;
 }
 
 .menu {
-	z-index: 10000000;
+	z-index: 999;
 	position: fixed;
 	/* position: absolute; */
 	/* background: rgb(5, 5, 5); */
